# DocSynthFab

./: .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md  check.bat  cleanup_refs.txt  cleanup_refs_after2.txt  imports_report.txt  pyproject.toml  pyside_refs_after.txt  pytest.ini  requirements-dev.txt  requirements-web.txt  requirements.txt  run_a1_gen.cmd  text_block_refs.txt
.ai1_orchestrator/00a83f512f76/: effective_config.yaml
.ai1_orchestrator/00d7fef0e3f0/: effective_config.yaml
.ai1_orchestrator/00d8be0ad987/: effective_config.yaml
.ai1_orchestrator/01298a04523f/: effective_config.yaml
.ai1_orchestrator/0177d9523bf2/: effective_config.yaml
.ai1_orchestrator/0182cc3f69b8/: effective_config.yaml
.ai1_orchestrator/01c0639a53e2/: effective_config.yaml
.ai1_orchestrator/032c8b5c73e2/: effective_config.yaml
.ai1_orchestrator/057dbf9c61c3/: effective_config.yaml
.ai1_orchestrator/05b70f117908/: effective_config.yaml
.ai1_orchestrator/06e50ded49b5/: effective_config.yaml
.ai1_orchestrator/06eb9751afc0/: effective_config.yaml
.ai1_orchestrator/072c997d94bb/: effective_config.yaml
.ai1_orchestrator/08a693a1d6b5/: effective_config.yaml
.ai1_orchestrator/0a98927eff43/: effective_config.yaml
.ai1_orchestrator/0b456f911589/: effective_config.yaml
.ai1_orchestrator/0b9571f429f2/: effective_config.yaml
.ai1_orchestrator/0ba7ca6ec996/: effective_config.yaml
.ai1_orchestrator/0bdbaf6e9bc2/: effective_config.yaml
.ai1_orchestrator/0c53da4150f4/: effective_config.yaml
.ai1_orchestrator/0c86f4f4dd5a/: effective_config.yaml
.ai1_orchestrator/0d484d3f1305/: effective_config.yaml
.ai1_orchestrator/0d6429573e21/: effective_config.yaml
.ai1_orchestrator/0d82571fb7fa/: effective_config.yaml
.ai1_orchestrator/0dc647dab82d/: effective_config.yaml
.ai1_orchestrator/117d231c2840/: effective_config.yaml
.ai1_orchestrator/12484cebaf5f/: effective_config.yaml
configs/: default.recipe.csv  default.yaml  default.yaml.bak  default.yaml.dist2.bak
scripts/: check_deps.ps1  clean_out.ps1  fix_mojibake_replacement_chars.py  run.ps1  setup_venv.ps1  smoke.ps1
test/: conftest.py
test_artifacts/: acceptance_quality_report.json  acceptance_quality_report.md  e2e_metrics.jsonl  e2e_safe_config.yaml  gui_generation_controls_visible_report.json  gui_generation_controls_visible_report.md  inspect_orchestrator_methods.py  real_generation_diagnostic.py  real_generation_diagnostic_report.json  real_generation_diagnostic_report.md
tests/: conftest.py
tools/: PYTHON_DEPENDENCIES_REPORT.json  PYTHON_DEPENDENCIES_REPORT.md  imports_report.txt  scan_project_deps.py  visualize_bench.py
(+1261 files in other folders)
