[build-system]
requires = ["setuptools>=68,<76", "wheel>=0.41,<1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docsynthfab"
version = "0.1.0a0"
description = "Experimental synthetic document dataset generator for OCR and Document AI prototyping."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Ender Emre Hayırlıoğlu" }]
dependencies = [
  "numpy>=1.24,<3.0",
  "Pillow>=10,<12",
  "opencv-python>=4.8,<5.0",
  "PyYAML>=6.0,<7.0",
  "tqdm>=4.66,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9.0",
  "pytest-cov>=4.1,<6.0",
  "pytest-xdist>=3.5,<4.0",
  "pytest-timeout>=2.2,<3.0",
  "pytest-randomly>=3.15,<4.0",
]
web = [
  "nicegui>=1.4,<3.0",
]

[project.scripts]
docsynthfab = "docsynthfab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["docsynthfab*"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-q"
markers = [
    "e2e: end-to-end tests that generate real output packages",
    "slow: slow tests that may take multiple seconds",
    "diversity: optional mathematical/layout diversity checks"
]